// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/npm should fetch package info from npm 1`] = `
Object {
  "dist-tags": undefined,
  "homepage": undefined,
  "name": undefined,
  "repositoryUrl": "https://github.com/renovateapp/dummy",
  "versions": Object {
    "0.0.1": Object {},
  },
}
`;

exports[`api/npm should fetch package info from npm 2`] = `
Array [
  "https://npm.mycustomregistry.com/foobar",
  Object {
    "headers": Object {},
    "json": true,
  },
]
`;

exports[`api/npm should send an authorization header if provided 1`] = `
Object {
  "dist-tags": undefined,
  "homepage": "https://google.com",
  "name": undefined,
  "repositoryUrl": "https://google.com",
  "versions": Object {
    "0.0.1": Object {},
  },
}
`;

exports[`api/npm should send an authorization header if provided 2`] = `
Array [
  "https://npm.mycustomregistry.com/foobar",
  Object {
    "headers": Object {
      "authorization": "Basic 1234",
    },
    "json": true,
  },
]
`;

exports[`api/npm should use NPM_TOKEN if provided 1`] = `
Object {
  "dist-tags": undefined,
  "homepage": "https://google.com",
  "name": undefined,
  "repositoryUrl": "https://google.com",
  "versions": Object {
    "0.0.1": Object {},
  },
}
`;

exports[`api/npm should use NPM_TOKEN if provided 2`] = `
Array [
  "https://npm.mycustomregistry.com/foobar",
  Object {
    "headers": Object {
      "authorization": "Bearer some-token",
    },
    "json": true,
  },
]
`;

exports[`api/npm should use homepage 1`] = `
Object {
  "dist-tags": undefined,
  "homepage": "https://google.com",
  "name": undefined,
  "repositoryUrl": "https://google.com",
  "versions": Object {
    "0.0.1": Object {},
  },
}
`;

exports[`api/npm should use homepage 2`] = `
Array [
  "https://npm.mycustomregistry.com/foobarhome",
  Object {
    "headers": Object {},
    "json": true,
  },
]
`;
